Rewrite dom node in more concise way.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,30 +7,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Post overview</title>
   <style type="text/css">
-    ul {
-      list-style-type: none;
-    }
-
-    li {
+    section {
       border-bottom: 1px solid grey;
       padding-bottom: 10px;
     }
 
-    li p:first-of-type>strong {
+    section p:first-of-type>strong {
       color: rgb(2.8%, 11.1%, 47.6%);
     }
 
-    li p:nth-of-type(2)>strong {
+    section p:nth-of-type(2)>strong {
       color: rgb(29.1%, 30.8%, 38.2%);
     }
   </style>
 </head>
 
 <body>
-  <div id="container">
-    <h2>Posts and their author</h2>
-    <ul></ul>
-  </div>
+  <h2>Posts and their author</h2>
   <script src="js/bundle.min.js"></script>
 </body>
 
